<resources>
    <string name="app_name">My Wallet</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_user_name">\@username or wallet address</string>
    <string name="prefix">\@</string>
    <string name="enter_your_pin">Enter your PIN</string>
    <string name="tv_continue">Continue</string>
    <string name="send_fund">Send Fund</string>
    <string name="scan">Scan</string>
    <string name="close">close</string>
    <string name="btn_txt_add_fund">Add fund</string>
    <string name="btn_max">Max</string>
    <string name="tv_usdc">USDC</string>
    <string name="tv_balance_usdc">Balance USDC</string>
    <string name="error_txt_insufficient_balance">Insufficient balance</string>
    <string name="hint_txt_amount">$0</string>
    <string name="tv_txt_recipient">Recipient</string>

</resources>