<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bg_white"
    android:padding="@dimen/_19sdp"
    tools:context=".send_fund.presentation.SendFundFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_parent_toolbar"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="@dimen/_19sdp"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_back"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_title_toolbar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/circular_std_bold"
                android:gravity="center_vertical"
                android:text="@string/send_fund"
                android:textColor="@color/black"
                android:textSize="@dimen/_19ssp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_title_recipient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:text="@string/tv_txt_recipient"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_parent_toolbar" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/layout_parent_user_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_1sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_1sdp"
            android:background="@drawable/bg_recipient"
            android:elevation="@dimen/_1sdp"
            android:gravity="center_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title_recipient">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/iv_user_image"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginVertical="@dimen/_8sdp"
                android:layout_marginStart="@dimen/_12sdp"
                app:shapeAppearanceOverlay="@style/shapeAppearanceOverlay.Circle"
                app:srcCompat="@color/white" />

            <LinearLayout
                android:id="@+id/layoutParentUserDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:contentDescription="@string/hint_user_name"
                    android:ellipsize="marquee"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:freezesText="true"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:scrollHorizontally="true"
                    android:singleLine="true"
                    android:textColor="@color/color_text_6E50FF"
                    android:textSize="@dimen/_15ssp"
                    tools:text="\@nadimh" />

                <TextView
                    android:id="@+id/tv_user_wallet_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/hint_user_name"
                    android:ellipsize="marquee"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:freezesText="true"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:scrollHorizontally="true"
                    android:singleLine="true"
                    android:textColor="@color/color_text_grey"
                    android:textSize="@dimen/_15ssp"
                    tools:text="- 3CGH...UwvX" />

            </LinearLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_parent_balance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/bg_balance"
            android:padding="@dimen/_15sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_parent_user_info">

            <EditText
                android:id="@+id/et_amount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_5sdp"
                android:background="@color/transparent"
                android:clickable="true"
                android:focusable="true"
                android:hint="@string/hint_txt_amount"
                android:inputType="numberDecimal"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="@dimen/_35ssp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/btn_max"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="Autofill" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_max"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_30sdp"
                android:background="@drawable/bg_btn_add_fund"
                android:text="@string/btn_max"
                android:textAllCaps="false"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/et_amount"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/et_amount" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_amount_currency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gray"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintStart_toStartOf="@+id/et_amount"
                app:layout_constraintTop_toBottomOf="@+id/et_amount"
                tools:text="@string/tv_usdc" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_user_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:textColor="@color/gray"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintBottom_toBottomOf="@id/tv_amount_currency"
                app:layout_constraintEnd_toEndOf="@id/btn_max"
                app:layout_constraintTop_toTopOf="@id/tv_amount_currency"
                tools:text="@string/tv_balance" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_error_insufficient_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_23sdp"
            android:text="@string/error_txt_insufficient_balance"
            android:textColor="@color/red"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_parent_balance" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_add_fund"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:padding="@dimen/_5sdp"
            android:background="@drawable/bg_btn_add_fund"
            android:text="@string/btn_txt_add_fund"
            android:textAllCaps="false"
            android:textColor="@color/button_active"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintBottom_toBottomOf="@id/tv_error_insufficient_balance"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_error_insufficient_balance" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_continue"
            android:layout_width="0dp"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_50sdp"
            android:background="@drawable/bg_btn"
            android:text="@string/tv_continue"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_17ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_error_insufficient_balance" />

        <ProgressBar
            android:id="@+id/loadingView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>